Prod Config with Postgress DB.

--- a/docker/.env
+++ b/docker/.env
@@ -1,5 +1,5 @@
 APP_JAR=user-0.0.1-SNAPSHOT.jar
-DB_URL=jdbc:postgresql://postgres:5432/user
+DB_URL=jdbc:postgresql://postgresql:5432/user
 DB_USER=user
 DB_PASSWORD=user
 SERVER_PORT=8080
@@ -8,3 +8,4 @@ PACKAGE_DEBUG_LEVEL=ERROR
 HIBERNATE_DEBUG_LEVEL=ERROR
 WEB_DEBUG_LEVEL=ERROR
 SPRING_PROFILES_ACTIVE=prod
+IP_ADDRESS=192.168.11.131
