--- a/docker/.env
+++ b/docker/.env
@@ -3,9 +3,9 @@ DB_URL=jdbc:postgresql://postgresql:5432/user
 DB_USER=user
 DB_PASSWORD=user
 SERVER_PORT=8080
-ROOT_DEBUG_LEVEL=ERROR
-PACKAGE_DEBUG_LEVEL=ERROR
-HIBERNATE_DEBUG_LEVEL=ERROR
-WEB_DEBUG_LEVEL=ERROR
+ROOT_DEBUG_LEVEL=DEBUG
+PACKAGE_DEBUG_LEVEL=DEBUG
+HIBERNATE_DEBUG_LEVEL=DEBUG
+WEB_DEBUG_LEVEL=DEBUG
 SPRING_PROFILES_ACTIVE=prod
-IP_ADDRESS=192.168.11.131
+IP_ADDRESS=127.0.0.1
